<resources>
    <string name="app_name">Family Location Sharing </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Free Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="addaccounttogroup">Add new member to your family group</string>


    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_payment">Payment</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_location_history">Map</string>


    //weather

    <string name="open_weather_maps_app_id">8e55932b7c016563bc7b579da58bc1a3</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string-array name="GPS">
        <item>15 seconds </item>
        <item>30 seconds </item>
        <item>1 minute </item>
        <item>3 minutes </item>
        <item>5 minutes </item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
    </string-array>
    <string-array name="GPSvalue">
        <item>15000 </item>
        <item>30000 </item>
        <item>60000 </item>
        <item>180000 </item>
        <item>300000 </item>
        <item>600000</item>
        <item>900000</item>
        <item>1200000</item>
    </string-array>
    <string-array name="maptheme">
        <item>Standard</item>
        <item>Retro</item>
        <item>Night</item>
        <item>Aubergine</item>
    </string-array>
    <string-array name="maptheme_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="gpsaccuracy">
        <item>High accuracy</item>
        <item>Balanced power accuracy</item>
        <item>Low power</item>
    </string-array>
    <string-array name="gpsaccuracy_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="distance_unit">
        <item>Kilometer</item>
        <item>Mile</item>
    </string-array>
    <string-array name="distanceunit_id">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_settings">AppSettings</string>


</resources>
