<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@drawable/mainbackground"

    >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/mainlayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp"
            >



            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                //add a dummy object in your xml, right before your Text Layout, so that it can consume the focus.

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px"/>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                       >

                <android.support.design.widget.TextInputEditText
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:hint="@string/passowrd"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="8dp" >

                    <CheckBox
                        android:id="@+id/show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_pwd"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/forgot"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>




                <Button
                    android:background="@drawable/ripple"
                    android:id="@+id/loginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:padding="6dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                     />
            </LinearLayout>

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/newUser"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_below="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="#777777"
                    android:text="OR"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
                <Button android:id="@+id/sign_in_button"
                    android:background="@drawable/googlesignin_ripple"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:layout_below="@+id/or"
                    android:text="SIGN IN WITH GOOGLE"/>

                <View android:id="@+id/leftLine"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="#777777"
                    android:layout_alignLeft="@id/sign_in_button"
                    android:layout_toLeftOf="@id/or"
                    android:layout_alignTop="@id/or"
                    android:layout_marginTop="7dp"/>

                <View android:id="@+id/rightLine"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="#777777"
                    android:layout_toRightOf="@id/or"
                    android:layout_alignRight="@id/sign_in_button"
                    android:layout_alignTop="@id/or"
                    android:layout_marginTop="7dp"/>


            </RelativeLayout>



        </RelativeLayout>


    </ScrollView>


</LinearLayout>




